# sb680

./: .gitignore  README
adhoc/: Makefile  adhoc-internal.c  adhoc-internal.h  adhoc-sb680.c  adhoc-sb880.c  adhoc-sb885.c  adhoc.h  collect-clicks.cpp  print.c  setup.sh  test.c
calibrate/: calibrate.cabal
calibrate/src/: Solve.hs
christian/analysis/: format
christian/analysis/all/: cap-data  six-bytes  six-bytes-active  six-bytes-unique
christian/analysis/buttons.pcapng/: cap-data  six-bytes  six-bytes-active  (+1 more)
christian/logs/: buttons-on-012-off-210-on-210-off-012-on-012-off-012-on-210-off-210.pcapng  doing-nothing.pcapng  keyboard-spam-32.pcapng  keyboard-spam.pcapng  pens-off-ltr-on-rtl-off-rtl-on-ltr-off-23410.pcapng  pens-off-on-then-buttons-click-then-button-on-off.pcapng  startup.pcapng
christian/logs-sb685/: design-room
christian/tools/: prepare-fake-data.sh  script.sh
christian/transforms/: 7.70  8.90  id
logs/: buttons.pcapng  calibration.pcapng  circles.pcapng  dots.pcapng  parallel-circles.pcapng  parallel-dots.pcapng  pens.pcapng
logs/analysis/: all  buttons-binary  circles.pcapng  doing-nothing.pcapng  dots.pcapng  endpoint-2  pens  pens-binary  startup-binary
module/: .sb680.ko.cmd  .sb680.mod.o.cmd  .sb680.o.cmd  Makefile  circles  hello-world.c  load  pens-ltr  sb680.c  sb680.mod.c  sb685.c  sb880.c  sb885.c  unload
module/.tmp_versions/: sb680.mod
nicolai/capture/: capture  live
nicolai/endpoints-descriptors/: notes
nicolai/logs/: note
touch-calibrate/: touch-calibrate.cabal
touch-calibrate/src/: Main.hs  Solve.hs
(+68 files in other folders)
