name:                calibrate
version:             0.1.0.1
synopsis:            Calibration tool for projector-based interactive whiteboards
-- description:         
license:             PublicDomain
license-file:        LICENSE
author:              Christian Sattler
maintainer:          sattler.christian@gmail.com
-- copyright:           
category:            Human Machine Interface
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable calibrate-input
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4 && <5
                     , X11 >=1.6 && <1.7
                     , GLUT >=2.7 && <2.8
                     , OpenGL >=3.0 && <3.1
                     , hmatrix >=0.17 && <0.18
  hs-source-dirs:      src
  default-language:    Haskell2010

executable calibrate-compute
  main-is:             Solve.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4 && <5
                     , X11 >=1.6 && <1.7
                     , GLUT >=2.7 && <2.8
                     , OpenGL >=3.0 && <3.1
                     , hmatrix >=0.17 && <0.18
  hs-source-dirs:      src
  default-language:    Haskell2010
